[metadata]
name = stealth-key-tool
version = 0.2.0
author = James Stroud
author_email = stealthsend@stealth-coin.com
license = MIT
description = A simplified wrapper for working with HD wallets
long_description = file: README.md
keywords = bip32 bip39 bip44 cryptocurrencies
url = https://github.com/Stealth-R-D-LLC/stealth-key-tool
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    stealth-key-tool.py = stealth_key_tool.key_tool_cli:main
    bip32gen = stealth_key_tool.bip32utils.bip32gen:main

[options.package_data]
stealth_key_tool = version.txt
